Fix footer z-index, update MangaSee, probably not for the last time

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1128,7 +1128,7 @@ details.settings-toggle[open]~.chapters {
 	width: 100vw;
 	height: 100vh;
 	background: rgba(0, 0, 0, 0.2);
-	z-index: 25;
+	z-index: 131;
 }
 
 .quick-select .scroll {
